app/styles/components/header.scss
header {
		width: 100%;
		display: block;
		position: sticky;
		left: 0;
		right: 0;
		top: 0;
		z-index: 50;
		background-color: transparent;
		backdrop-filter: blur(20px);
		height: 6rem;

	@include media(max-width-1301) {
		top:0;
		position:-webkit-sticky;
		position:sticky;
		background:rgba(27,32,44,0.5);
		-webkit-backdrop-filter:blur(10px);
		-moz-backdrop-filter:blur(10px);
		-ms-backdrop-filter:blur(10px);
		backdrop-filter:blur(20px);
	}

	content {

		display: flex;
		padding: 0px 0;
		flex-direction: row;
		justify-content: space-between;

		@include media(max-width-1301) {
			padding-top:14px;
		}

		> div {

			height:30px;
			display:flex;
			margin:30px 0;
			align-items:center;
			justify-content:center;

			@include media(max-width-1301) {
				margin:20px 0;
			}

			.logo {
				width:200px;
				height:40px;
				display:block;
				background-repeat:no-repeat;
				background-image:url("/static/img/logo.svg");
			}

		}

		> space {
			margin-left:auto;
		}

		> sidebar-menu {

			display:none;
			font-size:22px;
			cursor:pointer;
			margin-left:30px;
			align-items:center;
			flex-direction:row;
			justify-content:center;
			color:var(--text-color);

			* {
				cursor:pointer;
			}

			@include media(max-width-1301) {
				display:flex;
			}

			@include media(max-width-375) {
				margin-left:20px;
			}

		}

		> nav {

			margin:0;
			padding:0;
			display:flex;
			align-items:center;
			flex-direction:row;
			justify-content:center;

			> a {

				display:block;
				font-size:14px;
				cursor:pointer;
				margin:0 0 0 30px;
				padding:9px 0 9px 0;
				color:var(--faint-color);
				transition:color 0.5s, border 0.5s;
				border-bottom:3px solid transparent;

				@include faded;

				&[button] {

					height:40px;
					display:flex;
					white-space:nowrap;
					border-radius:50px;

					@include media(max-width-750) {
						display:none;
					}

					&[thinner] {
						border-radius:50px;
						background-color:var(--popup-color);
					}

				}

				&:not([button]) {

					@include media(max-width-1301) {
						display:none;
					}

					&[selected] {
						color:var(--text-color);
						border-bottom:3px solid var(--hover-color);
					}

					&:hover {
						border-bottom:3px solid var(--hover-color);
					}

				}

			}

			> div {

				display:block;
				font-size:14px;
				cursor:pointer;
				position:relative;
				margin:0 0 0 30px;
				padding:9px 0 9px 0;
				color:var(--faint-color);
				transition:color 0.5s, border 0.5s;
				border-bottom:3px solid transparent;

				@include media(max-width-1301) {
					display:none;
				}

				span[selected] {
					padding:9px 0 9px 0;
					color:var(--text-color);
					border-bottom:3px solid var(--hover-color);
				}

				&:hover {

					popup {

						top:25px;
						opacity:1;
						pointer-events:auto;

						* {
							pointer-events:auto;
						}

					}

				}

				popup {

					top:15px;
					opacity:0;
					width:600px;
					display:block;
					position:absolute;
					pointer-events:none;
					left:calc(50% - 300px);
					transition:top 0.3s, opacity 0.3s;

					@include media(max-width-1150) {
						left:calc(50% - 400px);
					}

					* {
						pointer-events:none;
					}

					> menu {

						width:100%;
						height:100%;
						display:block;
						margin:20px 0 0 0;
						position:relative;
						border-radius:16px;
						background-color:var(--popup-color);
						box-shadow:0 0 30px rgba(0,0,0,0.7), inset 0px 1px 1px rgba(255, 255, 255, 0.1);


						> arrow {

							width:0;
							height:0;
							top:-35px;
							position:absolute;
							left:calc(50% - 20px);
							border:20px solid transparent;
							border-bottom:20px solid var(--popup-color);

							@include media(max-width-1150) {
								left:calc(50% + 80px);
							}

						}

						> main {

							margin:0;
							display:grid;
							padding:20px;
							grid-gap:20px;
							grid-template-columns:repeat(2, 1fr);

							> a {

								border:0;
								margin:0;
								display:flex;
								padding:15px;
								border-radius:16px;
								flex-direction:column;
								transition:background 0.3s;

								&:only-child {
									grid-column:span 2;
								}

								div {
									display:flex;
									align-items:center;
									padding-bottom:5px;
									justify-content:flex-start;
								}

								icon {
									font-size:15px;
								}

								span {
									font-size:15px;
								}

								icon + span {
									margin-left:10px;
								}

								p {
									font-size:14px;
									line-height:1.7;
									padding-bottom:0;
								}

								&:hover {

									background-color:var(--back-color);

									icon, span {
										color:var(--text-color);
									}

								}

								&[selected] {

									background-color:var(--back-color);

									icon i {
										@include graded;
										color:transparent;
									}

								}

							}

						}

						> subs {

							margin:0;
							display:grid;
							padding:20px;
							grid-gap:12px 10px;
							border-bottom-left-radius:12px;
							border-bottom-right-radius:12px;
							background-color:var(--back-color);
							grid-template-columns:100px 1fr 1fr 170px;

							> a {

								border:0;
								margin:0;
								padding:15px;
								display:flex;
								flex-wrap:nowrap;
								border-radius:16px;
								flex-direction:column;
								justify-content:center;
								transition:background 0.3s;

								icon {
									width:20px;
									font-size:18px;
									display:inline-block;
									display:inline-flex;
									align-items:center;
									justify-content:center;
								}

								span {
									font-size:15px;
									margin-left:5px;
									white-space:nowrap;
								}

								&:hover {

									background-color:rgba(0,0,0,0.3);

									icon, span {
										color:var(--text-color);
									}

								}

							}

						}

					}

				}

			}

		}

	}

}

